--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,6 @@
     "reveal.js": "^3.7.0",
     "reveal.js-chalkboard": "^1.0.0",
     "reveal.js-menu": "^1.1.3"
-  }
+  },
+  "devDependencies": {}
 }
